--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,4 @@
+@import "./fonts";
 @import "./mixins";
 @import "./navigation";
 @import "./image-well";
@@ -5,6 +6,10 @@
 
 // general body styles
 body {
+  margin: 0;
+}
+
+main {
   position: relative;
   margin: 0;
 
@@ -99,7 +104,7 @@ body {
 }
 
 .page-title {
-  font-family: "Helvetica Roman";
+  font-family: $font-sans;
   font-size: 64px;
   font-style: normal;
   font-weight: 400;
@@ -223,7 +228,7 @@ body {
   }
 
   .nsc-title-medium {
-    font-family: "Big Caslon";
+    font-family: $font-serif;
     font-size: 36px;
     font-weight: 200;
     line-height: 1.25;
@@ -334,7 +339,7 @@ body {
 }
 
 .nsc-page-title {
-  font-family: "Big Caslon";
+  font-family: $font-serif;
   font-style: normal;
   font-weight: 400;
   text-align: center;
@@ -392,7 +397,7 @@ body {
   }
 
   h3 {
-    font-family: "Helvetica Roman";
+    font-family: $font-sans;
     font-weight: 400;
     line-height: 85%;
     color: #5e7017;
@@ -458,30 +463,30 @@ video {
     rgba(221, 220, 255, 1) 0%,
     rgba(250, 251, 251, 0) 100%
   );
-
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 219px;
+  // z-index: 3;
 
-  // @include respond-min($bp-tab) {
-  //   height: 253px;
-  // }
+  @include respond-min($bp-tab) {
+    height: 253px;
+  }
 
-  // @include respond-min($bp-lap) {
-  //   height: 76px;
-  // }
+  @include respond-min($bp-lap) {
+    height: 76px;
+  }
 
-  // @include respond-min($bp-lg-lap) {
-  //   height: 128px;
-  // }
+  @include respond-min($bp-lg-lap) {
+    height: 128px;
+  }
 
-  // @include respond-min($bp-desk) {
-  //   height: 116px;
-  // }
+  @include respond-min($bp-desk) {
+    height: 116px;
+  }
 
-  // @include respond-min($bp-lg-desk) {
-  //   height: 131px;
-  // }
+  @include respond-min($bp-lg-desk) {
+    height: 131px;
+  }
 }
