fix: respond-max, mobile opt start

--- a/src/styles/image-well.scss
+++ b/src/styles/image-well.scss
@@ -114,7 +114,7 @@
         width: 212px;
       }
 
-      @include respond-min($bp-tab) {
+      @include respond-max($bp-tab) {
         // height: 44%;
         top: 55%;
 
@@ -123,7 +123,7 @@
         }
       }
 
-      @include respond-min($bp-lap) {
+      @include respond-max($bp-lap) {
         // height: 60%;
         left: 50%;
         top: 57%;
@@ -133,7 +133,7 @@
         }
       }
 
-      @include respond-min($bp-desk) {
+      @include respond-max($bp-desk) {
         // height: 56%;
         left: 50%;
         top: 53%;
@@ -143,7 +143,7 @@
         }
       }
 
-      @include respond-min($bp-lg-desk) {
+      @include respond-max($bp-lg-desk) {
         img {
           width: 460px;
         }
@@ -189,7 +189,7 @@
           width: 127px;
         }
 
-        // @include respond-min($bp-mob) {
+        // @include respond-max($bp-mob) {
         //   left: 16%;
         //   top: 34%;
 
@@ -198,7 +198,7 @@
         //   }
         // }
 
-        @include respond-min($bp-tab) {
+        @include respond-max($bp-tab) {
           left: 22%;
           top: 32%;
 
@@ -207,17 +207,17 @@
           }
         }
 
-        @include respond-min($bp-lg-lap) {
+        @include respond-max($bp-lg-lap) {
           img {
             width: 194px;
           }
         }
-        @include respond-min($bp-desk) {
+        @include respond-max($bp-desk) {
           img {
             width: 230px;
           }
         }
-        @include respond-min($bp-lg-desk) {
+        @include respond-max($bp-lg-desk) {
           img {
             width: 250px;
           }
@@ -234,14 +234,14 @@
           top: -58%;
         }
 
-        @include respond-min($bp-mob) {
+        @include respond-max($bp-mob) {
           height: 16%;
           left: 13%;
           top: 56%;
           z-index: 10;
         }
 
-        @include respond-min($bp-tab) {
+        @include respond-max($bp-tab) {
           height: 25%;
           left: 13%;
           top: 65%;
@@ -261,7 +261,7 @@
           width: 131px;
         }
 
-        @include respond-min($bp-tab) {
+        @include respond-max($bp-tab) {
           left: 29%;
           top: 72%;
 
@@ -270,18 +270,18 @@
           }
         }
 
-        @include respond-min($bp-tab) {
+        @include respond-max($bp-tab) {
           img {
             width: 237px;
           }
         }
 
-        @include respond-min($bp-desk) {
+        @include respond-max($bp-desk) {
           img {
             width: 289px;
           }
         }
-        @include respond-min($bp-lg-desk) {
+        @include respond-max($bp-lg-desk) {
           img {
             width: 312px;
           }
@@ -299,7 +299,7 @@
           top: -12%;
         }
 
-        @include respond-min($bp-mob) {
+        @include respond-max($bp-mob) {
           left: 78%;
           top: 36%;
           height: 19%;
@@ -320,7 +320,7 @@
           width: 125px;
         }
 
-        @include respond-min($bp-mob) {
+        @include respond-max($bp-mob) {
           right: -3%;
           bottom: 5%;
 
@@ -329,24 +329,24 @@
           }
         }
 
-        @include respond-min($bp-tab) {
+        @include respond-max($bp-tab) {
           right: 17%;
           bottom: 0;
         }
 
-        @include respond-min($bp-lg-lap) {
+        @include respond-max($bp-lg-lap) {
           img {
             width: 211px;
           }
         }
 
-        @include respond-min($bp-desk) {
+        @include respond-max($bp-desk) {
           img {
             width: 258px;
           }
         }
 
-        @include respond-min($bp-lg-desk) {
+        @include respond-max($bp-lg-desk) {
           img {
             width: 278px;
           }
@@ -363,14 +363,14 @@
           right: -30%;
         }
 
-        @include respond-min($bp-mob) {
+        @include respond-max($bp-mob) {
           &.inactive-card {
             bottom: -10%;
             right: -20%;
           }
         }
 
-        @include respond-min($bp-tab) {
+        @include respond-max($bp-tab) {
           height: 28%;
           bottom: 11%;
           right: 2%;
@@ -394,13 +394,13 @@
           top: -11%;
         }
 
-        @include respond-min($bp-mob) {
+        @include respond-max($bp-mob) {
           height: 12%;
           left: 13%;
           top: 37%;
         }
 
-        @include respond-min($bp-tab) {
+        @include respond-max($bp-tab) {
           height: 19%;
           left: 29%;
           top: 28%;
@@ -417,13 +417,13 @@
           top: 2%;
         }
 
-        @include respond-min($bp-mob) {
+        @include respond-max($bp-mob) {
           height: 13%;
           left: 2%;
           top: 48%;
         }
 
-        @include respond-min($bp-tab) {
+        @include respond-max($bp-tab) {
           height: 21%;
           left: 13%;
           top: 36%;
@@ -440,7 +440,7 @@
           top: 112%;
         }
 
-        @include respond-min($bp-tab) {
+        @include respond-max($bp-tab) {
           height: 19%;
           left: 72%;
           top: 53%;
@@ -457,13 +457,13 @@
           top: 113%;
         }
 
-        @include respond-min($bp-mob) {
+        @include respond-max($bp-mob) {
           height: 12%;
           right: 0%;
           top: 78%;
         }
 
-        @include respond-min($bp-tab) {
+        @include respond-max($bp-tab) {
           height: 22%;
           right: 18%;
           top: 80%;
@@ -479,13 +479,13 @@
           bottom: 103%;
         }
 
-        @include respond-min($bp-mob) {
+        @include respond-max($bp-mob) {
           height: 9%;
           left: 20%;
           bottom: 37%;
         }
 
-        @include respond-min($bp-tab) {
+        @include respond-max($bp-tab) {
           height: 14%;
           left: 33%;
           bottom: 37%;
@@ -507,7 +507,7 @@
           left: -8%;
         }
 
-        @include respond-min($bp-tab) {
+        @include respond-max($bp-tab) {
           height: 21%;
           bottom: -6%;
           left: 19%;
@@ -522,7 +522,7 @@
           left: -30%;
         }
 
-        @include respond-min($bp-tab) {
+        @include respond-max($bp-tab) {
           height: 17%;
           left: 18%;
           top: 58%;
@@ -544,13 +544,13 @@
           top: -14%;
         }
 
-        @include respond-min($bp-mob) {
+        @include respond-max($bp-mob) {
           height: 19%;
           left: 83%;
           top: 39%;
         }
 
-        @include respond-min($bp-tab) {
+        @include respond-max($bp-tab) {
           height: 22%;
           left: 73%;
           top: 27%;
@@ -566,13 +566,13 @@
           right: -56%;
         }
 
-        @include respond-min($bp-mob) {
+        @include respond-max($bp-mob) {
           height: 10%;
           right: -15%;
           bottom: 18%;
         }
 
-        @include respond-min($bp-tab) {
+        @include respond-max($bp-tab) {
           height: 13%;
           right: 4%;
           bottom: 7%;
@@ -593,13 +593,13 @@
           right: -36%;
         }
 
-        @include respond-min($bp-mob) {
+        @include respond-max($bp-mob) {
           height: 12%;
           bottom: 39%;
           right: -10%;
         }
 
-        @include respond-min($bp-tab) {
+        @include respond-max($bp-tab) {
           height: 19%;
           bottom: 36%;
           right: 7%;
@@ -619,13 +619,13 @@
           bottom: -36%;
         }
 
-        @include respond-min($bp-mob) {
+        @include respond-max($bp-mob) {
           height: 15%;
           bottom: 9%;
           left: 23%;
         }
 
-        @include respond-min($bp-tab) {
+        @include respond-max($bp-tab) {
           height: 19%;
           bottom: 6%;
           left: 32%;
@@ -644,7 +644,7 @@
           top: -20%;
         }
 
-        @include respond-min($bp-mob) {
+        @include respond-max($bp-mob) {
           height: 24%;
           right: -27%;
           top: 60%;
@@ -655,7 +655,7 @@
           }
         }
 
-        @include respond-min($bp-tab) {
+        @include respond-max($bp-tab) {
           height: 32%;
           right: 8%;
           top: 56%;
@@ -677,13 +677,13 @@
           top: -14%;
         }
 
-        @include respond-min($bp-mob) {
+        @include respond-max($bp-mob) {
           height: 23%;
           left: 8%;
           top: 44%;
         }
 
-        @include respond-min($bp-tab) {
+        @include respond-max($bp-tab) {
           height: 33%;
           left: 23%;
           top: 35%;
@@ -699,13 +699,13 @@
           top: 112%;
         }
 
-        @include respond-min($bp-tab) {
+        @include respond-max($bp-tab) {
           height: 25%;
           left: 29%;
           top: 72%;
         }
 
-        @include respond-min($bp-mob) {
+        @include respond-max($bp-mob) {
           height: 14%;
           left: 14%;
           top: 75%;
@@ -723,7 +723,7 @@
           right: -46%;
         }
 
-        @include respond-min($bp-mob) {
+        @include respond-max($bp-mob) {
           height: 15%;
           right: 6%;
           top: 54%;
@@ -734,7 +734,7 @@
           }
         }
 
-        @include respond-min($bp-tab) {
+        @include respond-max($bp-tab) {
           height: 28%;
           right: 18%;
           top: 47%;
@@ -756,13 +756,13 @@
           top: 115%;
         }
 
-        @include respond-min($bp-mob) {
+        @include respond-max($bp-mob) {
           height: 17%;
           left: 20%;
           top: 75%;
         }
 
-        @include respond-min($bp-tab) {
+        @include respond-max($bp-tab) {
           height: 28%;
           left: 21%;
           top: 68%;
@@ -779,7 +779,7 @@
           top: -15%;
         }
 
-        @include respond-min($bp-mob) {
+        @include respond-max($bp-mob) {
           height: 20%;
           right: -10%;
           top: 38%;
@@ -790,7 +790,7 @@
           }
         }
 
-        @include respond-min($bp-tab) {
+        @include respond-max($bp-tab) {
           height: 35%;
           right: 1%;
           top: 38%;
@@ -812,7 +812,7 @@
           top: -20%;
         }
 
-        @include respond-min($bp-mob) {
+        @include respond-max($bp-mob) {
           height: 26%;
           left: 12%;
           top: 44%;
@@ -823,7 +823,7 @@
           }
         }
 
-        @include respond-min($bp-tab) {
+        @include respond-max($bp-tab) {
           height: 32%;
           left: 25%;
           top: 33%;
@@ -845,13 +845,13 @@
           bottom: -45%;
         }
 
-        @include respond-min($bp-mob) {
+        @include respond-max($bp-mob) {
           height: 18%;
           right: -29%;
           bottom: 7%;
         }
 
-        @include respond-min($bp-tab) {
+        @include respond-max($bp-tab) {
           height: 29%;
           right: 0%;
           bottom: -10%;
@@ -876,13 +876,13 @@
           top: -15%;
         }
 
-        @include respond-min($bp-mob) {
+        @include respond-max($bp-mob) {
           height: 20%;
           right: -3%;
           top: 35%;
         }
 
-        @include respond-min($bp-tab) {
+        @include respond-max($bp-tab) {
           height: 28%;
           right: 21%;
           top: 30%;
@@ -899,13 +899,13 @@
           top: -20%;
         }
 
-        @include respond-min($bp-mob) {
+        @include respond-max($bp-mob) {
           height: 20%;
           left: 21%;
           top: 35%;
         }
 
-        @include respond-min($bp-tab) {
+        @include respond-max($bp-tab) {
           height: 35%;
           left: 21%;
           top: 35%;
@@ -922,13 +922,13 @@
           top: 115%;
         }
 
-        @include respond-min($bp-mob) {
+        @include respond-max($bp-mob) {
           height: 18%;
           right: 3%;
           top: 78%;
         }
 
-        @include respond-min($bp-tab) {
+        @include respond-max($bp-tab) {
           height: 31%;
           right: 18%;
           top: 69%;
@@ -944,7 +944,7 @@
           right: -22%;
         }
 
-        @include respond-min($bp-tab) {
+        @include respond-max($bp-tab) {
           height: 24%;
           right: -18%;
           top: 55%;
@@ -954,7 +954,7 @@
           }
         }
 
-        @include respond-min($bp-mob) {
+        @include respond-max($bp-mob) {
           height: 17%;
           right: -26%;
           top: 47%;
@@ -975,13 +975,13 @@
           bottom: 0%;
         }
 
-        @include respond-min($bp-mob) {
+        @include respond-max($bp-mob) {
           height: 21%;
           left: 14%;
           bottom: 6%;
         }
 
-        @include respond-min($bp-tab) {
+        @include respond-max($bp-tab) {
           height: 38%;
           left: 27%;
           bottom: -14%;
@@ -999,7 +999,7 @@
           left: -34%;
         }
 
-        @include respond-min($bp-mob) {
+        @include respond-max($bp-mob) {
           height: 14%;
           left: 18%;
           top: 77%;
@@ -1010,7 +1010,7 @@
           }
         }
 
-        @include respond-min($bp-tab) {
+        @include respond-max($bp-tab) {
           height: 25%;
           left: 25%;
           top: 72%;
@@ -1031,7 +1031,7 @@
           left: -32%;
         }
 
-        @include respond-min($bp-mob) {
+        @include respond-max($bp-mob) {
           height: 20%;
           left: 7%;
           top: 47%;
@@ -1042,7 +1042,7 @@
           }
         }
 
-        @include respond-min($bp-tab) {
+        @include respond-max($bp-tab) {
           height: 32%;
           left: 21%;
           top: 35%;
@@ -1064,13 +1064,13 @@
           top: -24%;
         }
 
-        @include respond-min($bp-tab) {
+        @include respond-max($bp-tab) {
           height: 44%;
           right: 10%;
           top: 42%;
         }
 
-        @include respond-min($bp-mob) {
+        @include respond-max($bp-mob) {
           height: 29%;
           right: -18%;
           top: 46%;
@@ -1087,13 +1087,13 @@
           top: 110%;
         }
 
-        @include respond-min($bp-mob) {
+        @include respond-max($bp-mob) {
           height: 14%;
           right: -18%;
           top: 78%;
         }
 
-        @include respond-min($bp-tab) {
+        @include respond-max($bp-tab) {
           height: 18%;
           right: 6%;
           top: 80%;
