--- a/src/styles/thanks-page.scss
+++ b/src/styles/thanks-page.scss
@@ -5,15 +5,15 @@
   width: 100%;
   margin: 28px 0 20px;
 
-  @include respond-min($bp-lap) {
+  @include respond-max($bp-lap) {
     margin: 40px 21px;
   }
 
-  @include respond-min($bp-lg-lap) {
+  @include respond-max($bp-lg-lap) {
     margin: 44px 0 22px;
   }
 
-  @include respond-min($bp-desk) {
+  @include respond-max($bp-desk) {
     margin: 54px 0 29px;
   }
 
@@ -35,7 +35,7 @@
       font-size: 10px;
       letter-spacing: 0;
 
-      @include respond-min($bp-desk) {
+      @include respond-max($bp-desk) {
         font-size: 12px;
       }
     }
@@ -71,7 +71,7 @@
   list-style: none;
   font-size: 12px;
 
-  @include respond-min($bp-desk) {
+  @include respond-max($bp-desk) {
     font-size: 14px;
   }
 }
