--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -27,12 +27,25 @@
         width: 95px;
         height: 100%;
 
+        @include respond-max($bp-lg-desk) {
+          width: 150px;
+        }
+        @include respond-max($bp-desk) {
+          width: 150px;
+        }
+
+        @include respond-max($bp-lg-lap) {
+          width: 110px;
+        }
         @include respond-max($bp-lap) {
           width: 110px;
         }
 
-        @include respond-max($bp-desk) {
-          width: 150px;
+        @include respond-max($bp-tab) {
+          width: 110px;
+        }
+        @include respond-max($bp-mob) {
+          width: 95px;
         }
       }
 
@@ -58,20 +71,25 @@
     &.back-btn {
       left: 20px;
 
-      @include respond-max($bp-lap) {
-        left: 33px;
+      @include respond-max($bp-desk) {
+        left: 50px;
+      }
+      @include respond-max($bp-lg-desk) {
+        left: 65px;
       }
 
       @include respond-max($bp-lg-lap) {
         left: 55px;
       }
-
-      @include respond-max($bp-desk) {
-        left: 50px;
+      @include respond-max($bp-lap) {
+        left: 33px;
       }
 
-      @include respond-max($bp-lg-desk) {
-        left: 65px;
+      @include respond-max($bp-tab) {
+        left: 33px;
+      }
+      @include respond-max($bp-mob) {
+        left: 20px;
       }
     }
 
@@ -79,20 +97,25 @@
       transform: translateX(0%);
       right: 20px;
 
-      @include respond-max($bp-lap) {
-        right: 33px;
+      @include respond-max($bp-desk) {
+        right: 50px;
+      }
+      @include respond-max($bp-lg-desk) {
+        right: 65px;
       }
 
       @include respond-max($bp-lg-lap) {
         right: 55px;
       }
-
-      @include respond-max($bp-desk) {
-        right: 50px;
+      @include respond-max($bp-lap) {
+        right: 33px;
       }
 
-      @include respond-max($bp-lg-desk) {
-        right: 65px;
+      @include respond-max($bp-tab) {
+        right: 33px;
+      }
+      @include respond-max($bp-mob) {
+        right: 20px;
       }
     }
 
@@ -100,21 +123,28 @@
       right: 50%;
       transform: translateX(50%);
 
-      @include respond-max($bp-lap) {
-        right: 35px;
-        transform: translateX(0%);
-      }
-
-      @include respond-max($bp-lg-lap) {
-        right: 55px;
-      }
-
       @include respond-max($bp-desk) {
-        right: 50px;
+        right: 10%;
       }
 
       @include respond-max($bp-lg-desk) {
-        right: 70px;
+        right: 10%;
+      }
+
+      @include respond-max($bp-lap) {
+        right: 10%;
+      }
+      @include respond-max($bp-lg-lap) {
+        right: 10%;
+      }
+
+      @include respond-max($bp-tab) {
+        bottom: 10%;
+        right: 50%;
+      }
+      @include respond-max($bp-mob) {
+        right: 50%;
+        bottom: 10%;
       }
     }
 
