--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -80,7 +80,7 @@ main {
 
 .scene-wrapper {
   height: 100vh;
-  // width: 100vw;
+  width: 100vw;
   width: 100%;
   overflow: hidden;
 }
@@ -492,35 +492,43 @@ main {
 
     &.thanks-content {
       color: #5e7017;
-      font-size: 60px;
+      font-size: 170px;
       line-height: 1;
       letter-spacing: -0.04em;
 
-      @include respond-max($bp-lap) {
-        font-size: 112px;
-        line-height: 0.9;
+      @include respond-max($bp-lg-desk) {
+        font-size: 170px;
+      }
+      @include respond-max($bp-desk) {
+        font-size: 170px;
       }
 
       @include respond-max($bp-lg-lap) {
         font-size: 136px;
       }
-
-      @include respond-max($bp-desk + 1) {
-        font-size: 170px;
+      @include respond-max($bp-lap) {
+        font-size: 112px;
       }
 
-      &.content-mobile {
+      @include respond-max($bp-tab) {
+        font-size: 112px;
+      }
+      @include respond-max($bp-mob) {
+        font-size: 60px;
+      }
+
+      &.content-desk {
         display: block;
 
-        @include respond-max($bp-lap) {
+        @include respond-max($bp-tab) {
           display: none;
         }
       }
 
-      &.content-desk {
+      &.content-mobile {
         display: none;
 
-        @include respond-max($bp-lap) {
+        @include respond-max($bp-tab) {
           display: block;
         }
       }
