--- a/src/styles/thanks-page.scss
+++ b/src/styles/thanks-page.scss
@@ -64,14 +64,44 @@
   justify-content: center;
   padding-left: 0;
   gap: 24px;
-  font-family: "Helvetica Roman";
+  font-family: "Helvetica";
   font-weight: 700;
   letter-spacing: 0;
   color: #5e7017;
   list-style: none;
-  font-size: 12px;
+  font-size: 14px;
 
   @include respond-max($bp-desk) {
     font-size: 14px;
+  }
+}
+
+.outro-container-spacing {
+  padding-top: 168px;
+  padding-bottom: 3px;
+
+  @include respond-max($bp-lg-desk) {
+    padding-top: 110px;
+    padding-bottom: 0;
+  }
+  @include respond-max($bp-desk) {
+    padding-top: 95px;
+    padding-bottom: 0;
+  }
+
+  @include respond-max($bp-lg-lap) {
+    padding-top: 110px;
+    padding-bottom: 0;
+  }
+  @include respond-max($bp-lap) {
+    padding-top: 60px;
+    padding-bottom: 0;
+  }
+
+  @include respond-max($bp-tab) {
+    padding-top: 90px;
+  }
+  @include respond-max($bp-mob) {
+    padding-top: 120px;
   }
 }
