--- a/src/styles/image-well.scss
+++ b/src/styles/image-well.scss
@@ -73,19 +73,19 @@
       position: relative;
     }
 
-    // .project-title {
-    //   display: none;
-    //   font-family: "Helvetica Roman";
-    //   letter-spacing: -0.4px;
-    //   line-height: 92%;
-    //   text-transform: uppercase;
-    //   min-width: 300px;
-    //   min-height: 50px;
-    //   text-align: center;
-    //   transform: translate(-50%, -50%);
-    //   position: absolute;
-    //   z-index: 999999999999999999999999999999999;
-    // }
+    .project-title {
+      display: none;
+      font-family: "Helvetica Roman";
+      letter-spacing: -0.4px;
+      line-height: 92%;
+      text-transform: uppercase;
+      min-width: 300px;
+      min-height: 50px;
+      text-align: center;
+      transform: translate(-50%, -50%);
+      position: absolute;
+      z-index: 999999999999999999999999999999999;
+    }
     .test-relative {
       position: relative;
       width: 100%;
@@ -94,7 +94,7 @@
 
     &:hover:not(.poster) {
       z-index: 99999999;
-      cursor: crosshair;
+      cursor: pointer;
       transition: 0.3s ease-out;
       transform: translate(-50%, -50%) scale(1.25);
 
